refactor: use components instead of chatcolor